# XServerByAI

./: .gitignore  CMakeLists.txt  XServerByAI.Managed.sln
.agents/skills/do-feature/: SKILL.md
.agents/skills/test-feature/: SKILL.md
3rd/: CMakeLists.txt  README.md
3rd/dotnet_host/win-x64/: nethost.lib
3rd/kcp/: VENDORED_COMMIT.txt
3rd/zeromq/: CMakeLists.txt
client/: demo.txt  run-client.bat
client/Tests/XServer.Client.Tests/: ClientEntityManagerTests.cs  ClientEntityRpcTests.cs  ClientGameLogicServiceTests.cs  ClientRuntimeStateGameplayTests.cs  ClientRuntimeStateTests.cs  ClusterClientConfigLoaderTests.cs  GameInstanceGameplayTests.cs  GameInstanceTests.cs  GateAuthClientTests.cs  MinimalKcpSessionTests.cs  PacketCodecTests.cs  ParsedCommandTests.cs  XServer.Client.Tests.csproj
client/XServer.Client/: Program.cs  XServer.Client.csproj
client/XServer.Client.App/: Program.cs  XServer.Client.App.csproj
client/XServer.Client.App/App/: ClientConsoleApp.cs  ParsedCommand.cs
client/XServer.Client.Framework/: XServer.Client.Framework.csproj
client/XServer.Client.Framework/Auth/: GateLoginGrant.cs
client/XServer.Client.Framework/Configuration/: ClientLaunchOptions.cs  ClusterClientConfigLoader.cs  KcpTransportOptions.cs  ResolvedClientProfile.cs
client/XServer.Client.Framework/Entities/: AvatarEntity.cs  ClientEntity.cs  EntityManager.cs  EntityManagerErrorCode.cs
client/XServer.Client.Framework/Protocol/: ClientMessageIds.cs  KcpDatagramCodec.cs  KcpSegment.cs
client/XServer.Client.Framework/Rpc/: ClientEntityRpcDispatcher.cs  ClientEntityRpcPacketSender.cs  ClientEntityRpcRequest.cs  ClientRPCAttribute.cs  IClientEntityRpcSender.cs
client/XServer.Client.Framework/Runtime/: AccountView.cs  AvatarSessionState.cs  ClientLifecycleState.cs  ClientRuntimeState.Avatar.cs  ClientRuntimeState.Gameplay.cs  ClientRuntimeState.Status.cs  ClientRuntimeState.cs  GameInstance.Avatar.cs  GameInstance.Gameplay.cs  GameInstance.Status.cs  GameInstance.cs
client/XServer.Client.Framework/Transport/: ClientTransport.cs  MinimalKcpInboundResult.cs
client/XServer.Client.GameLogic/: ClientGameLogicService.cs  XServer.Client.GameLogic.csproj
client/XServer.Client/App/: ClientConsoleApp.cs  ClientScriptRunner.cs  CommandTokenizer.cs
client/XServer.Client/Auth/: GateAuthClient.cs  GateLoginGrant.cs
client/XServer.Client/Configuration/: ClientLaunchOptions.cs  ClusterClientConfigLoader.cs  ResolvedClientProfile.cs
client/XServer.Client/Protocol/: KcpCommand.cs
cmake/: toolchain-linux.cmake  toolchain-windows.cmake
configs/: local-dev.json
docs/: CONFIG_LOGGING.md  CONVENTIONS.md  DEVELOPMENT_PLAN.md  DISTRIBUTED_ENTITY.md  DOTNET_CLI.md  ERROR_CODE.md  GATE_GAME_ENVELOPE.md  KCP_CONFIG.md  M1-01.md  M1-02.md  M1-03.md  M1-04.md  M1-05.md  M1-06.md  M1-07.md  M1-08.md  M1-09.md  M1-10.md  M1-11.md  M1-12.md  M1-13.md  M1-14.md  M1-15.md  M1-16.md  M2-01.md  M2-02.md  M2-03.md  M2-04.md  M2-05.md  M2-06.md  M2-07.md  M2-08.md  M2-09.md  M2-10.md  M2-11.md  M2-12.md  M2-14-TEST.md  M2-14.md  M3-01.md  M3-02-TEST.md  (+48 more)
src/managed/: .editorconfig
src/managed/Common/: Common.csproj  (+1 more)
src/native/: .clang-format  CMakeLists.txt
src/native/core/: CMakeLists.txt  Config.cpp  Config.h  CoreLoopExecutor.cpp  CoreLoopExecutor.h  Json.cpp  Json.h  Logging.cpp  Logging.h  MainEventLoop.cpp  MainEventLoop.h  TimeUtils.cpp  TimeUtils.h  Timer.cpp  Timer.h  core.cpp
src/native/ipc/: CMakeLists.txt  ZmqActiveConnector.cpp  ZmqActiveConnector.h  ZmqContext.cpp  ZmqContext.h  ZmqError.h  ZmqListenerMetrics.cpp  ZmqListenerMetrics.h  ZmqPassiveListener.cpp  ZmqPassiveListener.h  ipc.cpp
src/native/net/: BinarySerialization.cpp  BinarySerialization.h  ByteOrder.h  CMakeLists.txt  KcpPeer.cpp  KcpPeer.h  MessageDispatcher.cpp  MessageDispatcher.h  PacketCodec.h  PacketHeader.h  ProcessHeartbeatCodec.cpp  ProcessHeartbeatCodec.h  net.cpp
src/native/net/message/: ClusterControlCodec.cpp  ClusterControlCodec.h  ControlMessageTypes.h  HeartbeatCodec.cpp  HeartbeatCodec.h  InnerClusterCodec.cpp  InnerClusterCodec.h  InnerMessageTypes.h  MessageIds.h  PacketCodec.cpp  RegisterCodec.cpp  RegisterCodec.h  RelayCodec.cpp  RelayCodec.h
src/native/node/: CMakeLists.txt  ClientNetwork.cpp  ClientNetwork.h  ClientSession.cpp  ClientSession.h  GameNode.cpp  GameNode.h  GateAuthHttpService.cpp  GateAuthHttpService.h  GateNode.cpp  GateNode.h  GmControlHttpService.cpp  GmControlHttpService.h  GmControlService.cpp  GmControlService.h  GmInnerService.cpp  GmInnerService.h  GmNode.cpp  GmNode.h  InnerNetwork.cpp  InnerNetwork.h  InnerNetworkSessionManager.cpp  InnerNetworkSessionManager.h  NodeCommon.cpp  NodeCommon.h  NodeCreateHelper.cpp  NodeCreateHelper.h  NodeGameRunner.cpp  NodeGameRunner.h  NodeGateRunner.cpp  NodeGateRunner.h  NodeGmRunner.cpp  NodeGmRunner.h  NodeRuntime.cpp  NodeRuntime.h  ProcessRegistry.cpp  ProcessRegistry.h  ServerNode.cpp  ServerNode.h  node_main.cpp
tests/cpp/: .clang-format  CMakeLists.txt  TestManagedConfigJson.h  cluster_control_codec_tests.cpp  core_loop_tests.cpp  heartbeat_codec_tests.cpp  host_runtime_tests.cpp  inner_cluster_codec_tests.cpp  ipc_active_connector_tests.cpp  ipc_passive_listener_tests.cpp  json_tests.cpp  kcp_peer_tests.cpp  main_event_loop_tests.cpp  message_dispatcher_tests.cpp  net_serialization_tests.cpp  node_client_network_tests.cpp  node_client_session_tests.cpp  node_create_helper_tests.cpp  node_game_gm_session_tests.cpp  node_game_node_tests.cpp  node_gate_gm_session_tests.cpp  node_gate_node_tests.cpp  node_gm_control_service_tests.cpp  node_gm_inner_service_tests.cpp  node_gm_node_tests.cpp  node_gm_register_tests.cpp  node_gm_runner_tests.cpp  node_inner_network_session_manager_tests.cpp  node_inner_network_tests.cpp  node_process_registry_tests.cpp  node_runtime_tests.cpp  packet_codec_tests.cpp  process_heartbeat_codec_tests.cpp  register_codec_tests.cpp  relay_codec_tests.cpp  time_tests.cpp
tests/python/: CMakeLists.txt  test_cluster_ctl.py
tools/: cluster_ctl.py  kill_local_cluster.bat  start_local_cluster.bat
(+138 files in other folders)
